2018-03-16  Yvan Fournier <yvan.fournier@edf.fr>

	* Release of PLE 2.0.2

	* Fix in ple_locator_extend_search() for non-local cases.

2016-12-28  Yvan Fournier <yvan.fournier@edf.fr>

	* Set default asynchronous exchange threshold for locator
	to nonzero value.

2015-06-27  Yvan Fournier <yvan.fournier@edf.fr>

	* Add support for internationalization.

2015-05-21  Yvan Fournier <yvan.fournier@edf.fr>

	* Release of PLE 2.0.1

	* Fix in PLE locator indexing for ple_locator_extend_search().

2015-02-11  Yvan Fournier <yvan.fournier@edf.fr>

	* Fixes in PLE locator for local (serial) mode.

2015-01-02  Yvan Fournier <yvan.fournier@edf.fr>

	* Fix for crash in some cases of PLE locator.

2014-11-14  Yvan Fournier <yvan.fournier@edf.fr>

	* Update version to PLE 2.0.0 due to API change.

2014-08-18  Yvan Fournier <yvan.fournier@edf.fr>

	* Release of PLE 1.0.4

	* Fix asynchronous exchange for ple_locator_exchange_point_var().

2014-06-16  Yvan Fournier <yvan.fournier@edf.fr>

	* Add Clang compiler detection.

2013-05-13  Yvan Fournier <yvan.fournier@edf.fr>

	* Updates in build scripts and MPI detection.

2012-10-29  Yvan Fournier <yvan.fournier@edf.fr>

	* Release of PLE 1.0.3

	* Fix a test for "locate on closest" and another for empty realloc.

2012-10-29  Yvan Fournier <yvan.fournier@edf.fr>

	* Release of PLE 1.0.2

	* Fix extra count (should be 3, not 4) in PLE flags exchange in ple_locator.c

2012-10-18  Yvan Fournier <yvan.fournier@edf.fr>

	* Fixes for mixed "locate on closest / do not locate on closest" cases.

2012-08-09  Yvan Fournier <yvan.fournier@edf.fr>

	* Avoid deprecated MPI datatypes to prepare for MPI 3.

2011-11-29  Yvan Fournier <yvan.fournier@edf.fr>

	* Fix link problem in PLE unit tests.

2011-07-28  David Monfort <david.monfort@edf.fr>

	* Fix MPI autodetection on FEDORA systems.

2011-07-25  Yvan Fournier <yvan.fournier@edf.fr>

	* Remove support for IRIX and Tru64 Unix, as these systems are
	now obsolete.
